1.6 Work browser and inject and cdp